[gd_scene load_steps=7 format=2]

[ext_resource path="res://fly_spriteframes.tres" type="SpriteFrames" id=1]
[ext_resource path="res://fly.gd" type="Script" id=2]
[ext_resource path="res://Assets/soundsandmusic/sounds/flyDead.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 11 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 28, 5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 35, 12 )

[node name="fly" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 35
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )
animation = "flying"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="top_checker" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_checker"]
position = Vector2( 0, -17 )
shape = SubResource( 2 )

[node name="side_bot_checker" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="side_bot_checker"]
position = Vector2( 0, 3 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="soundDead" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -20.0

[connection signal="body_entered" from="top_checker" to="." method="_on_top_checker_body_entered"]
[connection signal="body_entered" from="side_bot_checker" to="." method="_on_side_bot_checker_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
